Update .gitignore and modify weather prediction notebook outputs

--- a/weather-prediction.ipynb
+++ b/weather-prediction.ipynb
@@ -155,12 +155,12 @@
       "---------- user ----------\n",
       "What is current temperature in Paris?\n",
       "---------- weather_agent ----------\n",
-      "[FunctionCall(id='call_gvwvIJ2h9AHEUidsvW9YJMon', arguments='{\"city\":\"Paris\"}', name='get_temp')]\n",
+      "[FunctionCall(id='call_5dhocGc4YgWXkkVQugA10ncp', arguments='{\"city\":\"Paris\"}', name='get_temp')]\n",
       "[Prompt tokens: 78, Completion tokens: 14]\n",
       "---------- weather_agent ----------\n",
-      "[FunctionExecutionResult(content='Current temperature in Paris is 16 degrees', call_id='call_gvwvIJ2h9AHEUidsvW9YJMon')]\n",
+      "[FunctionExecutionResult(content='Current temperature in Paris is 5 degrees', call_id='call_5dhocGc4YgWXkkVQugA10ncp')]\n",
       "---------- weather_agent ----------\n",
-      "The current temperature in Paris is 16°C.\n",
+      "The current temperature in Paris is 5 degrees.\n",
       "[Prompt tokens: 84, Completion tokens: 11]\n",
       "---------- weather_agent ----------\n",
       "TERMINATE\n",
@@ -170,7 +170,7 @@
       "Finish reason: Text 'TERMINATE' mentioned\n",
       "Total prompt tokens: 290\n",
       "Total completion tokens: 29\n",
-      "Duration: 2.35 seconds\n"
+      "Duration: 40.91 seconds\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
