--- a/Structured output using GPT-4o models.ipynb
+++ b/Structured output using GPT-4o models.ipynb
@@ -88,13 +88,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'steps': [{'explanation': 'To solve the addition problem, we start by aligning the numbers vertically based on place value (units and tens places).', 'output': '  16\\n+32\\n---'}, {'explanation': 'Add the digits in the units (rightmost) column: 6 + 2 = 8.', 'output': '  16\\n+32\\n---\\n  8'}, {'explanation': 'Then, add the digits in the tens column: 1 + 3 = 4.', 'output': '  16\\n+32\\n---\\n 48'}], 'final_answer': 'The sum of 16 and 32 is 48.'}\n"
+      "{'steps': [{'explanation': 'To solve, we need to add the two integers together.', 'output': '16 + 32'}, {'explanation': 'Add the tens place first: 1 (tens from 16) + 3 (tens from 32) = 4 tens.', 'output': '40'}, {'explanation': 'Now add the ones place: 6 (ones from 16) + 2 (ones from 32) = 8 ones.', 'output': '8'}, {'explanation': 'Combine the results from both steps: 40 (tens) + 8 (ones).', 'output': '48'}], 'final_answer': '48'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "MathReasoning(steps=[Step(explanation='To solve the addition problem, we start by aligning the numbers vertically based on place value (units and tens places).', output='  16\\n+32\\n---'), Step(explanation='Add the digits in the units (rightmost) column: 6 + 2 = 8.', output='  16\\n+32\\n---\\n  8'), Step(explanation='Then, add the digits in the tens column: 1 + 3 = 4.', output='  16\\n+32\\n---\\n 48')], final_answer='The sum of 16 and 32 is 48.')"
+       "MathReasoning(steps=[Step(explanation='To solve, we need to add the two integers together.', output='16 + 32'), Step(explanation='Add the tens place first: 1 (tens from 16) + 3 (tens from 32) = 4 tens.', output='40'), Step(explanation='Now add the ones place: 6 (ones from 16) + 2 (ones from 32) = 8 ones.', output='8'), Step(explanation='Combine the results from both steps: 40 (tens) + 8 (ones).', output='48')], final_answer='48')"
       ]
      },
      "execution_count": 5,
@@ -134,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
