Update autogen to 0.4.0.dev12 and re-ran notebooks

--- a/Structured output using GPT-4o models.ipynb
+++ b/Structured output using GPT-4o models.ipynb
@@ -40,7 +40,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v1/cv54pg7n7rdfjb_37_f20cd00000gn/T/ipykernel_22744/731393293.py:6: DeprecationWarning: autogen_ext.models.AzureOpenAIChatCompletionClient moved to autogen_ext.models.openai.AzureOpenAIChatCompletionClient. This alias will be removed in 0.4.0.\n",
+      "  client = AzureOpenAIChatCompletionClient(\n",
+      "/Users/sjuratovic/repos/autogen-experiments/.venv/lib/python3.10/site-packages/autogen_ext/models/openai/_openai_client.py:1061: UserWarning: Previous behavior of using the model name as the deployment name is deprecated and will be removed in 0.4. Please specify azure_deployment\n",
+      "  client = _azure_openai_client_from_config(copied_args)\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
@@ -64,7 +75,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v1/cv54pg7n7rdfjb_37_f20cd00000gn/T/ipykernel_22744/3799510949.py:5: DeprecationWarning: autogen_core.components.models.UserMessage moved to autogen_core.models.UserMessage. This alias will be removed in 0.4.0.\n",
+      "  UserMessage(content=\"What is 16 + 32?\", source=\"user\"),\n"
+     ]
+    }
+   ],
    "source": [
     "from autogen_core.components.models import UserMessage\n",
     "\n",
@@ -88,13 +108,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'steps': [{'explanation': 'To solve, we need to add the two integers together.', 'output': '16 + 32'}, {'explanation': 'Add the tens place first: 1 (tens from 16) + 3 (tens from 32) = 4 tens.', 'output': '40'}, {'explanation': 'Now add the ones place: 6 (ones from 16) + 2 (ones from 32) = 8 ones.', 'output': '8'}, {'explanation': 'Combine the results from both steps: 40 (tens) + 8 (ones).', 'output': '48'}], 'final_answer': '48'}\n"
+      "{'steps': [{'explanation': 'Start with the number 16.', 'output': '16'}, {'explanation': 'Add the second number, which is 32, to the first number 16.', 'output': '16 + 32 = 48'}], 'final_answer': '48'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "MathReasoning(steps=[Step(explanation='To solve, we need to add the two integers together.', output='16 + 32'), Step(explanation='Add the tens place first: 1 (tens from 16) + 3 (tens from 32) = 4 tens.', output='40'), Step(explanation='Now add the ones place: 6 (ones from 16) + 2 (ones from 32) = 8 ones.', output='8'), Step(explanation='Combine the results from both steps: 40 (tens) + 8 (ones).', output='48')], final_answer='48')"
+       "MathReasoning(steps=[Step(explanation='Start with the number 16.', output='16'), Step(explanation='Add the second number, which is 32, to the first number 16.', output='16 + 32 = 48')], final_answer='48')"
       ]
      },
      "execution_count": 5,
