Add weather prediction functionality and update .gitignore
- Implement asynchronous weather fetching in functions.py
- Create weather-prediction-async.py for interactive weather queries
- Add launch configuration for VSCode
- Update .gitignore to exclude __pycache__ directories
- Modify weather-prediction.ipynb for compatibility with new functions

--- a/weather-prediction.ipynb
+++ b/weather-prediction.ipynb
@@ -18,6 +18,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Warning control\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autogen_ext.models import AzureOpenAIChatCompletionClient\n",
+    "from autogen_ext.models.openai import AzureOpenAIChatCompletionClient\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "import requests"
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,18 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from autogen_agentchat.agents import AssistantAgent\n",
-    "from autogen_agentchat.task import Console, TextMentionTermination\n",
+    "from autogen_agentchat.ui import Console\n",
+    "from autogen_agentchat.conditions import TextMentionTermination\n",
     "from autogen_agentchat.teams import RoundRobinGroupChat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -155,22 +167,21 @@
       "---------- user ----------\n",
       "What is current temperature in Paris?\n",
       "---------- weather_agent ----------\n",
-      "[FunctionCall(id='call_5NAVqka3q9McjDwJDbjq5GH7', arguments='{\"city\":\"Paris\"}', name='get_temp')]\n",
-      "[Prompt tokens: 78, Completion tokens: 14]\n",
+      "[FunctionCall(id='call_TISsdTWMHhtizRCzUvXi1OOu', arguments='{\"city\":\"Paris\"}', name='get_temp')]\n",
+      "[Prompt tokens: 75, Completion tokens: 14]\n",
       "---------- weather_agent ----------\n",
-      "[FunctionExecutionResult(content='Current temperature in Paris is 5 degrees', call_id='call_5NAVqka3q9McjDwJDbjq5GH7')]\n",
+      "[FunctionExecutionResult(content='Current temperature in Paris is 5 degrees', call_id='call_TISsdTWMHhtizRCzUvXi1OOu')]\n",
       "---------- weather_agent ----------\n",
-      "The current temperature in Paris is 5 degrees.\n",
-      "[Prompt tokens: 84, Completion tokens: 11]\n",
+      "Current temperature in Paris is 5 degrees\n",
       "---------- weather_agent ----------\n",
-      "TERMINATE\n",
-      "[Prompt tokens: 128, Completion tokens: 4]\n",
+      "The current temperature in Paris is 5 degrees. TERMINATE\n",
+      "[Prompt tokens: 108, Completion tokens: 13]\n",
       "---------- Summary ----------\n",
       "Number of messages: 5\n",
       "Finish reason: Text 'TERMINATE' mentioned\n",
-      "Total prompt tokens: 290\n",
-      "Total completion tokens: 29\n",
-      "Duration: 2.68 seconds\n"
+      "Total prompt tokens: 183\n",
+      "Total completion tokens: 27\n",
+      "Duration: 2.03 seconds\n"
      ]
     }
    ],
